# song-to-video

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  install.sh  pyproject.toml
scripts/: verify_install.py
src/song_to_video/: __init__.py  cli.py
src/song_to_video/audio/: __init__.py  analysis.py  loader.py  lyrics.py  models.py  transcribe.py
src/song_to_video/image/: __init__.py  flux.py  models.py  prompts.py
src/song_to_video/memory/: __init__.py  hardware.py  monitor.py  offload.py  phase.py  vram.py
src/song_to_video/planning/: __init__.py  models.py  narrative.py  ollama.py  seed.py  storyboard.py
src/song_to_video/video/: __init__.py  compose.py  generator.py  models.py
tests/: __init__.py
tests/test_audio/: test_analysis.py  test_lyrics.py
tests/test_image/: __init__.py  test_models.py  test_prompts.py
tests/test_memory/: test_hardware.py  test_phase.py
tests/test_planning/: test_models.py  test_seed.py
tests/test_video/: test_compose.py  test_models.py
